--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav id="menu" class="menu">
           <ul>
             <li>
-              <a href="/Offerings">What we do</a>
+              <a href="/Offerings" >What can we do</a>
             </li>
             <li>
               <a href="/About-us">Who we are</a>
