Added link on homepage to contact

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <a href="/Latest" class="current">Latest</a>
             </li>
             <li>
-              <a href="/Contact">Contact</a>
+              <a href="contact.html">Contact</a>
             </li>
             <li class="search">
               <input type="text" id="searchInput" onkeyup="searchFunction()" placeholder="Search titles" title="Type in title search term">
