--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
     <h1>Hej</h1>
 </head>
 <body>
-  <h2>Testing</h2>
+
+  <div id="googleMap" style="width:100%;height:400px;"></div>
+
+  <script>
+  function myMap() {
+  var mapProp= {
+    center:new google.maps.LatLng(57.679060379769446, 12.001565698645578),
+    zoom:5,
+  };
+  var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+  }
+  </script>
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
 
 </body>
 </html>
