--- a/contact.html
+++ b/contact.html
@@ -14,14 +14,14 @@
   <script>
   function myMap() {
   var mapProp= {
-    center:new google.maps.LatLng(57.679060379769446, 12.001565698645578),
+    center:new google.maps.LatLng(57.679060379769446, -12.001565698645578),
     zoom:5,
   };
   var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
   }
   </script>
 
-  <script src="https://www.google.se/maps/place/IT-H%C3%B6gskolan/@57.678937,11.999377,17z/data=!3m2!4b1!5s0x464ff3baf967d449:0xd0ae7c18636885d!4m12!1m6!3m5!1s0x464ff369d0835015:0xba46082e9c214f49!2sIT-H%C3%B6gskolan!8m2!3d57.6789342!4d12.0015657!3m4!1s0x464ff369d0835015:0xba46082e9c214f49!8m2!3d57.6789342!4d12.0015657"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
 
 </body>
 </html>
