--- a/contact.html
+++ b/contact.html
@@ -4,24 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Playfair+Display:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/reset.css" type="text/css">
+    <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
+
+
     <title>Contact</title>
-    <h1>Hej</h1>
 </head>
 <body>
 
-  <div id="googleMap" style="width:100%;height:400px;"></div>
 
-  <script>
-  function myMap() {
-  var mapProp= {
-    center:new google.maps.LatLng(57.679060379769446, -12.001565698645578),
-    zoom:5,
-  };
-  var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-  }
-  </script>
+  <!--Header-->
+  <header id="header" class="header">
+    <div id="branding">
+      <img src="assets/google-logo-animation.gif">
+    </div>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
+    <a href="index.html"><h1>News</h1></a>
+
+
+                      <!--Menu-->
+                      <nav id="menu" class="menu">
+                        <ul>
+                          <li>
+                            <a href="/Offerings" >What we do</a>
+                          </li>
+                          <li>
+                            <a href="/About-us">Who we are</a>
+                          </li>
+                          <li>
+                            <a href="/Customers">Customers</a>
+                          </li>
+                          <li>
+                            <a href="/Careers">Career</a>
+                          </li>
+                            <li>
+                              <a href="/Investor-relations">IR</a>
+                            </li>
+                            <li>
+                              <a href="index.html">Latest</a>
+                            </li>
+                            <li>
+                              <a href="contact.html"class="current">Contact</a>
+                            </li>
+                            <li class="search">
+                              <input type="text" id="searchInput" onkeyup="searchFunction()" placeholder="Search titles" title="Type in title search term">
+                            </li>
+                            <li class="icon">
+                              <a href="javascript:void(0);" onclick="menuFunction()">&#9776;</a>
+                            </li>
+                          </ul>
+                        </nav>
+                      </header>
+
+
+<!--Map-->
+<div class="mapouter"><div class="gmap_canvas"><iframe width="2000" height="287" id="gmap_canvas" src="https://maps.google.com/maps?q=Ebbe%20Lieberathsgatan%2018C,%20412%2065%20G%C3%B6teborg&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:287px;width:2000px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:287px;width:1181px;}</style></div></div>
+
 
 </body>
 </html>
