--- a/footer.html
+++ b/footer.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>testing footer</h1>
+    <h1>testing footer</h1>
+    <h1>testing footer</h1>
+    <h1>testing footer</h1>
+
 </body>
 </html>
