--- a/contact.html
+++ b/contact.html
@@ -69,4 +69,5 @@
   <p>hejhej</p>
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </html>
