--- a/whoweare.html
+++ b/whoweare.html
@@ -59,8 +59,7 @@
                       </header>
 
 
-<!--Map-->
-<div class="mapouter"><div class="gmap_canvas"><iframe width="2000" height="287" id="gmap_canvas" src="https://maps.google.com/maps?q=Ebbe%20Lieberathsgatan%2018C,%20412%2065%20G%C3%B6teborg&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:287px;width:2000px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:287px;width:1181px;}</style></div></div>
+ <p>About us</p>
 
 
 
