--- a/whoweare.html
+++ b/whoweare.html
@@ -31,7 +31,7 @@
                             <a href="/Offerings" >What we do</a>
                           </li>
                           <li>
-                            <a href="/About-us">Who we are</a>
+                            <a href="/About-us" class="current" >Who we are</a>
                           </li>
                           <li>
                             <a href="/Customers">Customers</a>
@@ -46,7 +46,7 @@
                               <a href="index.html">Latest</a>
                             </li>
                             <li>
-                              <a href="contact.html"class="current">Contact</a>
+                              <a href="contact.html">Contact</a>
                             </li>
                             <li class="search">
                               <input type="text" id="searchInput" onkeyup="searchFunction()" placeholder="Search titles" title="Type in title search term">
