Started bootstrap grid

--- a/contact.html
+++ b/contact.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Playfair+Display:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/reset.css" type="text/css">
-    <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Playfair+Display:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/css/reset.css" type="text/css">
+  <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
 
 
-    <title>Contact</title>
+  <title>Contact</title>
 </head>
+
 <body>
 
 
@@ -21,53 +23,108 @@
       <img src="assets/google-logo-animation.gif">
     </div>
 
-    <a href="index.html"><h1>News</h1></a>
+    <a href="index.html">
+      <h1>News</h1>
+    </a>
 
 
-                      <!--Menu-->
-                      <nav id="menu" class="menu">
-                        <ul>
-                          <li>
-                            <a href="/Offerings" >What we do</a>
-                          </li>
-                          <li>
-                            <a href="/About-us">Who we are</a>
-                          </li>
-                          <li>
-                            <a href="/Customers">Customers</a>
-                          </li>
-                          <li>
-                            <a href="/Careers">Career</a>
-                          </li>
-                            <li>
-                              <a href="/Investor-relations">IR</a>
-                            </li>
-                            <li>
-                              <a href="index.html">Latest</a>
-                            </li>
-                            <li>
-                              <a href="contact.html"class="current">Contact</a>
-                            </li>
-                            <li class="search">
-                              <input type="text" id="searchInput" onkeyup="searchFunction()" placeholder="Search titles" title="Type in title search term">
-                            </li>
-                            <li class="icon">
-                              <a href="javascript:void(0);" onclick="menuFunction()">&#9776;</a>
-                            </li>
-                          </ul>
-                        </nav>
-                      </header>
+    <!--Menu-->
+    <nav id="menu" class="menu">
+      <ul>
+        <li>
+          <a href="/Offerings">What we do</a>
+        </li>
+        <li>
+          <a href="/About-us">Who we are</a>
+        </li>
+        <li>
+          <a href="/Customers">Customers</a>
+        </li>
+        <li>
+          <a href="/Careers">Career</a>
+        </li>
+        <li>
+          <a href="/Investor-relations">IR</a>
+        </li>
+        <li>
+          <a href="index.html">Latest</a>
+        </li>
+        <li>
+          <a href="contact.html" class="current">Contact</a>
+        </li>
+        <li class="search">
+          <input type="text" id="searchInput" onkeyup="searchFunction()" placeholder="Search titles"
+            title="Type in title search term">
+        </li>
+        <li class="icon">
+          <a href="javascript:void(0);" onclick="menuFunction()">&#9776;</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <section class="hero-banner col-12-md">
+    <img class="hero-banner__img" src="https://upload.wikimedia.org/wikipedia/commons/3/32/Googleplex_HQ_%28cropped%29.jpg">
+  </section>
+
+<section class="col-12-md">
+  <h2>Get in touch!</h2>
+</section>
 
 
-<!--Map-->
-<div class="mapouter"><div class="gmap_canvas"><iframe width="2000" height="287" id="gmap_canvas" src="https://maps.google.com/maps?q=Ebbe%20Lieberathsgatan%2018C,%20412%2065%20G%C3%B6teborg&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:287px;width:2000px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:287px;width:1181px;}</style></div></div>
+<!--This is the information articles section-->
+<section>
+  <article class="col-3-md">
+    <h4>Test</h4>
+    <p>Information 1</p>
+    <p>Information 2</p>
+  </article>
+  <article class="col-3-md">
+    <h4>Test</h4>
+    <p>Information 1</p>
+    <p>Information 2</p>
+  </article>
+  <article class="col-3-md">
+    <h4>Test</h4>
+    <p>Information 1</p>
+    <p>Information 2</p>
+  </article>
+  <div class="row-3-md"></div>
+</section>
+
+
+  <!--Map-->
+  <div class="mapouter col-12-md">
+    <div class="gmap_canvas"><iframe width="2000" height="287" id="gmap_canvas"
+        src="https://maps.google.com/maps?q=Ebbe%20Lieberathsgatan%2018C,%20412%2065%20G%C3%B6teborg&t=&z=13&ie=UTF8&iwloc=&output=embed"
+        frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+        href="https://123movies-to.org"></a><br>
+      <style>
+        .mapouter {
+          position: relative;
+          text-align: right;
+          height: 287px;
+          width: 2000px;
+        }
+      </style><a href="https://www.embedgooglemap.net"></a>
+      <style>
+        .gmap_canvas {
+          overflow: hidden;
+          background: none !important;
+          height: 287px;
+          width: 1181px;
+        }
+      </style>
+    </div>
+  </div>
 
 
 
-    <h2> detta är ett test </h2>
+  <h2> detta är ett test </h2>
 
   <p>hejhej</p>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </html>
