Continued bootstrap grid

--- a/contact.html
+++ b/contact.html
@@ -118,6 +118,16 @@
     </div>
   </div>
 
+  <section class="col-12-md">
+    <h2>Meet the team</h2>
+
+    <div class="col-2-md">
+      <img src="">
+    </div>
+  </section>
+
+
+
 
 
   <h2> detta är ett test </h2>
