Continued bootstrap grid
Finished "Meet the team" section

--- a/contact.html
+++ b/contact.html
@@ -120,10 +120,71 @@
 
   <section class="col-12-md">
     <h2>Meet the team</h2>
-
+<div>
     <div class="col-2-md">
       <img src="">
+      <h3>Name</h3>
+      <p>Description</p>
     </div>
+    <div class="col-2-md">
+      <img src="">
+      <h3>Name</h3>
+      <p>Description</p>
+    </div>
+    <div class="col-2-md">
+      <img src="">
+      <h3>Name</h3>
+      <p>Description</p>
+    </div>
+    <div class="col-2-md">
+      <img src="">
+      <h3>Name</h3>
+      <p>Description</p>
+    </div>
+    <div class="col-2-md">
+      <img src="">
+      <h3>Name</h3>
+      <p>Description</p>
+    </div>
+    <div class="col-2-md">
+      <img src="">
+      <h3>Name</h3>
+      <p>Description</p>
+    </div>
+  </div>
+  <!-- second row for portrays of avatars-->
+  <div>
+    <div class="col-2-md">
+      <img src="">
+      <h3>Name</h3>
+      <p>Description</p>
+    </div>
+    <div class="col-2-md">
+      <img src="">
+      <h3>Name</h3>
+      <p>Description</p>
+    </div>
+    <div class="col-2-md">
+      <img src="">
+      <h3>Name</h3>
+      <p>Description</p>
+    </div>
+    <div class="col-2-md">
+      <img src="">
+      <h3>Name</h3>
+      <p>Description</p>
+    </div>
+    <div class="col-2-md">
+      <img src="">
+      <h3>Name</h3>
+      <p>Description</p>
+    </div>
+    <div class="col-2-md">
+      <img src="">
+      <h3>Name</h3>
+      <p>Description</p>
+    </div>
+  </div>
   </section>
 
 
