Finished bootstrap grid

--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
     </div>
   </div>
 
-  <section class="col-12-md">
+  <section class="row-12-md">
     <h2>Meet the team</h2>
 <div>
     <div class="col-2-md">
@@ -187,13 +187,26 @@
   </div>
   </section>
 
+  <footer class="row">
+    <div class="col-3-md">
+      <h3>About us</h3>
+      <p>Blaha</p>
+      <p>Blaha</p>
+    </div>
 
+    <div class="col-3-md">
+      <h3>About you</h3>
+      <p>Blaha</p>
+      <p>Blaha</p>
+    </div>
 
+    <div class="col-3-md">
+      <h3>Address</h3>
+      <p>Blaha</p>
+      <p>Blaha</p>
+    </div>
 
-
-  <h2> detta är ett test </h2>
-
-  <p>hejhej</p>
+</footer>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
