--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Playfair+Display:400,700" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/reset.css" type="text/css">
   <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
 
@@ -63,38 +64,38 @@
     </nav>
   </header>
 
-  <section class="hero-banner col-12-md">
+  <section class="hero-banner col-12">
     <img class="hero-banner__img" src="https://upload.wikimedia.org/wikipedia/commons/3/32/Googleplex_HQ_%28cropped%29.jpg">
   </section>
 
-<section class="col-12-md">
+<section class="col-12">
   <h2>Get in touch!</h2>
 </section>
 
 
 <!--This is the information articles section-->
-<section>
-  <article class="col-3-md">
+<section class="row">
+  <article class="col-3">
     <h4>Test</h4>
     <p>Information 1</p>
     <p>Information 2</p>
   </article>
-  <article class="col-3-md">
+  <article class="col-3">
     <h4>Test</h4>
     <p>Information 1</p>
     <p>Information 2</p>
   </article>
-  <article class="col-3-md">
+  <article class="col-3">
     <h4>Test</h4>
     <p>Information 1</p>
     <p>Information 2</p>
   </article>
-  <div class="row-3-md"></div>
+  <div class="row-3"></div>
 </section>
 
 
   <!--Map-->
-  <div class="mapouter col-12-md">
+  <div class="mapouter col-12">
     <div class="gmap_canvas"><iframe width="2000" height="287" id="gmap_canvas"
         src="https://maps.google.com/maps?q=Ebbe%20Lieberathsgatan%2018C,%20412%2065%20G%C3%B6teborg&t=&z=13&ie=UTF8&iwloc=&output=embed"
         frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
@@ -118,68 +119,68 @@
     </div>
   </div>
 
-  <section class="row-12-md">
+  <section class="row-12">
     <h2>Meet the team</h2>
-<div>
-    <div class="col-2-md">
+<div class="row">
+    <div class="col-2">
       <img src="">
       <h3>Name</h3>
       <p>Description</p>
     </div>
-    <div class="col-2-md">
+    <div class="col-2">
       <img src="">
       <h3>Name</h3>
       <p>Description</p>
     </div>
-    <div class="col-2-md">
+    <div class="col-2">
       <img src="">
       <h3>Name</h3>
       <p>Description</p>
     </div>
-    <div class="col-2-md">
+    <div class="col-2">
       <img src="">
       <h3>Name</h3>
       <p>Description</p>
     </div>
-    <div class="col-2-md">
+    <div class="col-2">
       <img src="">
       <h3>Name</h3>
       <p>Description</p>
     </div>
-    <div class="col-2-md">
+    <div class="col-2">
       <img src="">
       <h3>Name</h3>
       <p>Description</p>
     </div>
   </div>
   <!-- second row for portrays of avatars-->
-  <div>
-    <div class="col-2-md">
+  <div class="row">
+    <div class="col-2">
       <img src="">
       <h3>Name</h3>
       <p>Description</p>
     </div>
-    <div class="col-2-md">
+    <div class="col-2">
       <img src="">
       <h3>Name</h3>
       <p>Description</p>
     </div>
-    <div class="col-2-md">
+    <div class="col-2">
       <img src="">
       <h3>Name</h3>
       <p>Description</p>
     </div>
-    <div class="col-2-md">
+    <div class="col-2">
       <img src="">
       <h3>Name</h3>
       <p>Description</p>
     </div>
-    <div class="col-2-md">
+    <div class="col-2">
       <img src="">
       <h3>Name</h3>
       <p>Description</p>
     </div>
-    <div class="col-2-md">
+    <div class="col-2">
       <img src="">
       <h3>Name</h3>
       <p>Description</p>
@@ -188,19 +189,19 @@
   </section>
 
   <footer class="row">
-    <div class="col-3-md">
+    <div class="col-3">
       <h3>About us</h3>
       <p>Blaha</p>
       <p>Blaha</p>
     </div>
 
-    <div class="col-3-md">
+    <div class="col-3">
       <h3>About you</h3>
       <p>Blaha</p>
       <p>Blaha</p>
     </div>
 
-    <div class="col-3-md">
+    <div class="col-3">
       <h3>Address</h3>
       <p>Blaha</p>
       <p>Blaha</p>
