--- a/contact.html
+++ b/contact.html
@@ -123,32 +123,32 @@
     <h2>Meet the team</h2>
 <div class="row">
     <div class="col-2">
-      <img src="">
+      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
       <h3>Name</h3>
       <p>Description</p>
     </div>
     <div class="col-2">
-      <img src="">
+      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
       <h3>Name</h3>
       <p>Description</p>
     </div>
     <div class="col-2">
-      <img src="">
+      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
       <h3>Name</h3>
       <p>Description</p>
     </div>
     <div class="col-2">
-      <img src="">
+      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
       <h3>Name</h3>
       <p>Description</p>
     </div>
     <div class="col-2">
-      <img src="">
+      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
       <h3>Name</h3>
       <p>Description</p>
     </div>
     <div class="col-2">
-      <img src="">
+      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
       <h3>Name</h3>
       <p>Description</p>
     </div>
@@ -156,32 +156,32 @@
   <!-- second row for portrays of avatars-->
   <div class="row">
     <div class="col-2">
-      <img src="">
+      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
       <h3>Name</h3>
       <p>Description</p>
     </div>
     <div class="col-2">
-      <img src="">
+      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
       <h3>Name</h3>
       <p>Description</p>
     </div>
     <div class="col-2">
-      <img src="">
+      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
       <h3>Name</h3>
       <p>Description</p>
     </div>
     <div class="col-2">
-      <img src="">
+      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
       <h3>Name</h3>
       <p>Description</p>
     </div>
     <div class="col-2">
-      <img src="">
+      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
       <h3>Name</h3>
       <p>Description</p>
     </div>
     <div class="col-2">
-      <img src="">
+      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
       <h3>Name</h3>
       <p>Description</p>
     </div>
