--- a/company.html
+++ b/company.html
@@ -92,11 +92,100 @@
     </article>
   </section>
 
+  <!--Divider-->
   <div>
     <hr>
   </div>
-    
+    <!--End of Divider-->
 
+    <!--Our Story-->
+    <section>
+        <article class="col-12">
+            <h3>Our Story</h3>
+            <p>Lorem ipsum dolor sit amet consectetur. Adipiscing rhoncus velit convallis odio pulvinar. Nibh lobortis nunc id proin sed. Cursus diam fringilla nibh volutpat at viverra eros turpis. Ullamcorper in eleifend amet facilisi accumsan bibendum lacus nibh. Velit purus a aliquam gravida neque nulla. </p>
+            <p> Non hendrerit interdum vulputate commodo. Mattis commodo nulla porttitor dolor ultrices nec ut. Mattis mattis viverra netus morbi. Laoreet euismod nulla vitae dictumst a nibh. In feugiat molestie elementum phasellus neque. Interdum amet aliquet risus mi proin id vestibulum. Tortor a amet elementum ultrices facilisis neque ipsum feugiat. Sed metus adipiscing purus eget urna neque donec diam amet. Amet tellus amet imperdiet quam. Proin id venenatis tortor nec iaculis nibh. Dolor egestas orci varius habitasse tellus nam morbi ut. Proin donec non phasellus praesent non quis diam dignissim lectus. </p>
+            <p>Mollis amet et hac accumsan mollis. Tempus non enim id proin porttitor. Vehicula massa accumsan fermentum non sit. Eu a pellentesque tortor aenean sed odio nec sed nibh. Dignissim ultricies purus leo faucibus. Amet etiam fermentum molestie eleifend ultricies curabitur. Nulla pharetra dictumst pellentesque vel vitae. Ipsum aliquet venenatis libero egestas nam ultricies suspendisse semper. Sit cras ut amet ullamcorper ultricies in diam odio vitae. Elementum tincidunt sodales iaculis velit eget. Lobortis magna aliquam blandit at aliquam mauris pharetra. Massa sapien faucibus semper amet. Metus consequat tristique at dictum rhoncus. Massa ullamcorper ultrices egestas nam dapibus quis adipiscing iaculis et. Interdum ornare mattis bibendum tristique nisl dolor orci. Massa eu ante facilisi venenatis etiam odio placerat. </p>
+        </article>
+    </section>
+        <!--End of Our Story-->
+    
+  <!--Divider-->
+  <div>
+    <hr>
+  </div>
+    <!--End of Divider-->
+
+      <!--"Meet the team" section-->
+  <section class="row-12">
+    <h2>Meet the team</h2>
+    <!--First row-->
+    <div class="row">
+      <div class="col-2">
+        <img src="">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img src="">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img src="">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img src="">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img src="">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img src="">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+    </div>
+    <!-- Second row-->
+    <div class="row">
+      <div class="col-2">
+        <img src="">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img src="">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img src="">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img src="">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img src="">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img src="">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+    </div>
+  </section>
+  <!-- End of "Meet the team" section-->
 
   <!--Footer-->
   <footer class="row">
