--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Playfair+Display:400,700" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/reset.css" type="text/css">
   <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
 
@@ -28,8 +29,7 @@
       <h1>News</h1>
     </a>
 
-
-    <!--Menu-->
+    <!--Navbar-->
     <nav id="menu" class="menu">
       <ul>
         <li>
@@ -63,36 +63,37 @@
       </ul>
     </nav>
   </header>
+  <!--End of Navbar-->
 
   <section class="hero-banner col-12">
-    <img class="hero-banner__img" src="https://upload.wikimedia.org/wikipedia/commons/3/32/Googleplex_HQ_%28cropped%29.jpg">
+    <img class="hero-banner__img"
+      src="https://upload.wikimedia.org/wikipedia/commons/3/32/Googleplex_HQ_%28cropped%29.jpg">
   </section>
 
-<section class="col-12">
-  <h2>Get in touch!</h2>
-</section>
+  <section class="col-12">
+    <h2>Get in touch!</h2>
+  </section>
 
-
-<!--This is the information articles section-->
-<section class="row">
-  <article class="col-3">
-    <h4>Test</h4>
-    <p>Information 1</p>
-    <p>Information 2</p>
-  </article>
-  <article class="col-3">
-    <h4>Test</h4>
-    <p>Information 1</p>
-    <p>Information 2</p>
-  </article>
-  <article class="col-3">
-    <h4>Test</h4>
-    <p>Information 1</p>
-    <p>Information 2</p>
-  </article>
-  <div class="row-3"></div>
-</section>
-
+  <!--Information articles section-->
+  <section class="row">
+    <article class="col-3">
+      <h4>Test</h4>
+      <p>Information 1</p>
+      <p>Information 2</p>
+    </article>
+    <article class="col-3">
+      <h4>Test</h4>
+      <p>Information 1</p>
+      <p>Information 2</p>
+    </article>
+    <article class="col-3">
+      <h4>Test</h4>
+      <p>Information 1</p>
+      <p>Information 2</p>
+    </article>
+    <div class="row-3"></div>
+  </section>
+  <!--End of Information articles section-->
 
   <!--Map-->
   <div class="mapouter col-12">
@@ -118,96 +119,105 @@
       </style>
     </div>
   </div>
+  <!--End of Map-->
 
+  <!--Divider-->
+  <div>
+    <hr>
+  </div>
+  <!-- End of Divider-->
+
+  <!--"Meet the team" section-->
   <section class="row-12">
     <h2>Meet the team</h2>
-<div class="row">
-    <div class="col-2">
-      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-      <h3>Name</h3>
-      <p>Description</p>
+    <!--First row-->
+    <div class="row">
+      <div class="col-2">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
     </div>
-    <div class="col-2">
-      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-      <h3>Name</h3>
-      <p>Description</p>
+    <!-- Second row-->
+    <div class="row">
+      <div class="col-2">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
+      <div class="col-2">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <h3>Name</h3>
+        <p>Description</p>
+      </div>
     </div>
-    <div class="col-2">
-      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-      <h3>Name</h3>
-      <p>Description</p>
-    </div>
-    <div class="col-2">
-      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-      <h3>Name</h3>
-      <p>Description</p>
-    </div>
-    <div class="col-2">
-      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-      <h3>Name</h3>
-      <p>Description</p>
-    </div>
-    <div class="col-2">
-      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-      <h3>Name</h3>
-      <p>Description</p>
-    </div>
-  </div>
-  <!-- second row for portrays of avatars-->
-  <div class="row">
-    <div class="col-2">
-      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-      <h3>Name</h3>
-      <p>Description</p>
-    </div>
-    <div class="col-2">
-      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-      <h3>Name</h3>
-      <p>Description</p>
-    </div>
-    <div class="col-2">
-      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-      <h3>Name</h3>
-      <p>Description</p>
-    </div>
-    <div class="col-2">
-      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-      <h3>Name</h3>
-      <p>Description</p>
-    </div>
-    <div class="col-2">
-      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-      <h3>Name</h3>
-      <p>Description</p>
-    </div>
-    <div class="col-2">
-      <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-      <h3>Name</h3>
-      <p>Description</p>
-    </div>
-  </div>
   </section>
+  <!-- End of "Meet the team" section-->
 
+  <!--Footer-->
   <footer class="row">
     <div class="col-3">
       <h3>About us</h3>
       <p>Blaha</p>
       <p>Blaha</p>
     </div>
-
     <div class="col-3">
       <h3>About you</h3>
       <p>Blaha</p>
       <p>Blaha</p>
     </div>
-
     <div class="col-3">
       <h3>Address</h3>
       <p>Blaha</p>
       <p>Blaha</p>
     </div>
-
-</footer>
+  </footer>
+  <!--End Footer-->
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
