Added md to bootstrap class

--- a/contact.html
+++ b/contact.html
@@ -132,32 +132,32 @@
     <h2>Meet the team</h2>
     <!--First row-->
     <div class="row">
-      <div class="col-2">
+      <div class="col-md-2">
         <img src="">
         <h3>Name</h3>
         <p>Description</p>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <img src="">
         <h3>Name</h3>
         <p>Description</p>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <img src="">
         <h3>Name</h3>
         <p>Description</p>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <img src="">
         <h3>Name</h3>
         <p>Description</p>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <img src="">
         <h3>Name</h3>
         <p>Description</p>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <img src="">
         <h3>Name</h3>
         <p>Description</p>
@@ -165,32 +165,32 @@
     </div>
     <!-- Second row-->
     <div class="row">
-      <div class="col-2">
+      <div class="col-md-2">
         <img src="">
         <h3>Name</h3>
         <p>Description</p>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <img src="">
         <h3>Name</h3>
         <p>Description</p>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <img src="">
         <h3>Name</h3>
         <p>Description</p>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <img src="">
         <h3>Name</h3>
         <p>Description</p>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <img src="">
         <h3>Name</h3>
         <p>Description</p>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <img src="">
         <h3>Name</h3>
         <p>Description</p>
