Changed the web title

--- a/company.html
+++ b/company.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
 
 
-  <title>Contact</title>
+  <title>Who we are</title>
 </head>
 
 <body>
